modify pom.xml