@@ -12,7 +12,71 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.main.runner>z.z.w.test.MainRunner</project.main.runner>
+		<project.jvm.arguments>-server -Xms4096M -Xmx4096M
+			-XX:-UseGCOverheadLimit -verbose:gc -XX:+PrintGCDetails
+			-XX:+HeapDumpOnOutOfMemoryError</project.jvm.arguments>
 	</properties>
+
+	<profiles>
+		<!-- mvn clean package -Pmaster -->
+		<profile>
+			<id>dev</id>
+			<properties>
+				<logback.target>target</logback.target>
+			</properties>
+			<build>
+				<resources>
+					<resource>
+						<directory>src/main/resources</directory>
+						<filtering>true</filtering>
+					</resource>
+				</resources>
+			</build>
+			<!-- 默认激活环境 -->
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+		</profile>
+
+		<profile>
+			<id>master</id>
+			<properties>
+				<logback.target>..</logback.target>
+			</properties>
+
+			<build>
+				<resources>
+					<resource>
+						<directory>src/main/resources</directory>
+						<targetPath>${project.build.directory}/${project.build.finalName}/conf</targetPath>
+						<filtering>true</filtering>
+					</resource>
+
+					<resource>
+						<directory>src/main/java</directory>
+						<includes>
+							<include>META-INF/**/*.*</include>
+						</includes>
+					</resource>
+				</resources>
+
+				<plugins>
+					<!-- 自動打包生成shell腳本和bat腳本 -->
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>appassembler-maven-plugin</artifactId>
+					</plugin>
+
+					<!-- assembly插件，分結構打包 -->
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-assembly-plugin</artifactId>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 
 	<dependencyManagement>
 		<dependencies>
@@ -84,10 +148,50 @@
 				</plugin>
 
 				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>appassembler-maven-plugin</artifactId>
+					<version>1.3</version>
+					<configuration>
+						<configurationDirectory>conf</configurationDirectory>
+						<assembleDirectory>${project.build.directory}/${project.build.finalName}</assembleDirectory>
+						<repositoryLayout>flat</repositoryLayout>
+						<repositoryName>lib</repositoryName>
+						<includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
+						<useAsterikClassPath>true</useAsterikClassPath>
+						<showConsoleWindow>false</showConsoleWindow>
+						<extraJvmArguments>${project.jvm.arguments}</extraJvmArguments>
+						<binFileExtensions>
+							<unix>.sh</unix>
+						</binFileExtensions>
+						<platforms>
+							<!-- <platform>windows</platform> -->
+							<platform>unix</platform>
+						</platforms>
+						<programs>
+							<program>
+								<mainClass>${project.main.runner}</mainClass>
+								<name>rProject</name>
+							</program>
+						</programs>
+					</configuration>
+					<executions>
+						<execution>
+							<phase>package</phase>
+							<goals>
+								<goal>assemble</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+
+				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-assembly-plugin</artifactId>
 					<version>2.2.1</version>
 					<configuration>
+						<filters>
+							<filter>src/main/assembly/filter.properties</filter>
+						</filters>
 						<descriptors>
 							<descriptor>src/main/assembly/assembly.xml</descriptor>
 						</descriptors>
@@ -157,6 +261,7 @@
 		<module>../pro-nsq-test</module>
 		<module>../nsq-java</module>
 		<module>../pro-base-test</module>
+		<module>../pro-mybatis-test</module>
 	</modules>
 
 </project>
